# FAST

./: .gitignore  404.html  Dockerfile  README.md  calipatria_client.ipynb  calipatria_massdownloader.ipynb  config.json  config_calipatria.json  docs.yml  environment.yml  index.html  mkdocs.yml  parse_config.py  requirements.txt  run_fp.py  run_simsearch.py  sitemap.xml  tutorial.md
FAST-new/: CMakeLists.txt  MinHash.cpp  MinHash.h  ReadOptions.h  SimilaritySearch.cpp  SimilaritySearch.h  gen_detections.py  main.cpp  mat-to-txt.py  parse_results.py  plot_vote_vs_jaccard.py  simhash-main.py  toint64.cpp  toint64.h
FAST-new/cython/: cyInterface.pyx  main.py  setup.py
FAST-pyDriver/: CMakeLists.txt  MinHash.cpp  MinHash.h  SimilaritySearch.cpp  SimilaritySearch.h  cyInterface.pyx  main.cpp  main.py  setup.py  toint64.cpp
FAST_checklist/: index.html
FAST_code/: Magnitude_3comp_events.m  SimilaritySearch.h  add_constant_text_file.py  attach_wavelet_images.m  check_waveform_fingerprint.m  clean.m  combine_sac_time_series.m  combine_similarity_results.m  compare_detections_with_catalog.m  compare_fpss_detections_with_autocorr.m  compare_hrsn_detections_with_catalog.m  compile.m  compute_single_station_direction.py  compute_waveform_residual_norm.m  driver_AZ_KNW_01hr.m  driver_NCSN_many_channel_24hr.m  driver_N_HIYH_N_01hr.m  dsq_test.m  filter_and_decimate_data.py  fread_sac.m  get_autocorr_detections.m  get_downsample_power_2.m  get_fingerprints_3component.m  get_fpss_input_parameters.m  get_sac_time_series_parts.m  get_spectral_images_and_wavelet_transform.m  (+91 more)
(+1494 files in other folders)
